<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">StreamCorn</string>

    <string name="transition_dialog" translatable="false">transition_dialog</string>

    <string name="title_channels">Channels</string>
    <string name="title_library">Library</string>
    <string name="title_downloads">Downloads</string>

    <string name="title_settings">Settings</string>

    <string name="title_movies">Movies</string>
    <string name="title_tv_series">TV Shows</string>

    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

    <string name="search">Search</string>
    <string name="search_hint">Search…</string>

    <string name="channel_unknown">Error, unknown channel</string>
    <string name="channel_not_available">Sorry, the channel is currently not available</string>
    <string name="no_search_results">No results found</string>
    <string name="no_items">No saved items</string>
    <string name="description">Description</string>
    <string name="empty_description">No description available</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="trailer">Trailer</string>
    <string name="play_dialog_title">Play from…</string>
    <string name="download_dialog_title">Download from…</string>
    <string name="library_added">Added to library</string>
    <string name="library_removed">Removed from library</string>
    <string name="library_error">An error occured with the library</string>
    <string name="media_duration">%1$d minutes</string>
    <string name="seasons_number">Seasons: %1$d</string>
    <string name="season_item">Season %1$d</string>

    <string name="please_wait">Please wait…</string>
    <string name="resolving_urls">Resolving urls…</string>
    <string name="server_not_supported">Sorry, this server is not supported</string>
    <string name="error_resolving_urls">Error: cannot resolve the url, maybe the video has been deleted</string>

    <!-- Preferences strings -->
    <string name="pref_header_theme">Theme</string>

    <string name="pref_title_general_theme">General theme</string>
    <string name="light_theme_name">Light</string>
    <string name="dark_theme_name">Dark</string>
    <string name="daytime_theme_name">Daytime</string>


    <string name="pref_header_network">Network preferences</string>

    <string name="pref_title_stream_policy">Streaming network preferences</string>
    <string name="pref_title_download_policy">Download network preferences</string>
    <string name="network_always">Every network</string>
    <string name="network_only_wifi">Only on Wi-Fi</string>


</resources>